// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 1 expense 1`] = `
<div>
  <h3>
    Viewing 
     
    expenses
     totalling 
    $1,300.00
  </h3>
</div>
`;

exports[`should render ExpenseSummary with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
     
    expenses
     totalling 
    $1,346.95
  </h3>
</div>
`;
